--- a/quality.html
+++ b/quality.html
@@ -34,7 +34,7 @@
           alt="Nimbus"
         />
         <img class="others-img" src="./img/bicicletas/magic.jpg" alt="Magic" />
-        <img+
+        <img
           class="others-img"
           id="neb"
           src="./img/bicicletas/nebula.jpg"
