--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <li><a href="#bicicletas">Bicicletas</a></li>
                 <li><a href="#seguros">Seguros</a></li>
                 <li><a href="#contato">Contato</a></li>
-                <li><a href="#">Termos e Condições</a></li>
+                <li><a href="#">Termos e Condições .</a></li>
               </ul>
             </div>
           </div>
