--- a/insurance.html
+++ b/insurance.html
@@ -148,6 +148,112 @@
       <section class="questions">
         <h2>perguntas frequentes<span class="gold">.</span></h2>
       </section>
+
+      <dl>
+        <div class="faq-item">
+          <dt class="question">
+            Qual forma de pagamento vocês aceitam?
+            <img src="./img/icones/seta-abrir.svg" alt="">
+          </dt>
+          <dd class="answer">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+          </dd>
+        </div>
+
+        <div class="faq-item">
+          <dt class="question">
+            Como posso entrar em contato?
+            <img src="./img/icones/seta-abrir.svg" alt="">
+          </dt>
+          <dd class="answer">
+            Entre em Contato conosco através do e-mail contato@bikcraft.com.br ou pelo telefone (11) 99999-9999. Nosso horário de atendimento é de segunda a sexta, das 8h às 18h.
+          </dd>
+        </div>
+
+        <div class="faq-item">
+          <dt class="question">
+            Vocês possuem algum desconto?
+            <img src="./img/icones/seta-abrir.svg" alt="">
+          </dt>
+          <dd class="answer">
+            Sim, oferecemos um desconto de 10% para pagamentos à vista. Para pagamentos parcelados, aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+          </dd>
+        </div>
+
+        <div class="faq-item">
+          <dt class="question">
+            Qual a garantia que possuo?
+            <img src="./img/icones/seta-abrir.svg" alt="">
+          </dt>
+          <dd class="answer">A garantia é válida por 12 meses a partir da data de compra e cobre defeitos de fabricação. Para mais informações, consulte nossa política de garantia.
+          </dd>
+        </div>
+
+        <div class="faq-item">
+          <dt class="question">
+            Posso parcelar no boleto?
+            <img src="./img/icones/seta-abrir.svg" alt="">
+          </dt>
+          <dd class="answer">
+            Sim, é possível parcelar no boleto em até 12 vezes.
+          </dd>
+        </div>
+
+        <div class="faq-item">
+          <dt class="question">
+            Quantas trocas posso fazer ao ano?
+            <img src="./img/icones/seta-abrir.svg" alt="">
+          </dt>
+          <dd class="answer">
+            No plano prata, você pode fazer até duas trocas por ano. No plano ouro, oferecemos trocas ilimitadas.
+          </dd>
+        </div>
+
+        <div class="faq-item">
+          <dt class="question">
+            Qual Bikcraft devo escolher para o meu tamanho?
+            <img src="./img/icones/seta-abrir.svg" alt="">
+          </dt>
+          <dd class="answer">
+            Para escolher o tamanho ideal da sua Bikcraft, considere sua altura e o comprimento das suas pernas. Recomendamos consultar nossa tabela de tamanhos disponível no site ou entrar em contato com nosso suporte para assistência personalizada.
+          </dd>
+        </div>
+      </dl>
+
+      <footer>
+        <div class="footer-logo">
+          <img src="./img/bikcraft.svg" alt="">
+        </div>
+
+        <div class="infoma">
+          <h4 class="contact">CONTATO</h4>
+          <div class="detail">
+            <p>+55 11 99999-9999</p>
+            <p>contato@bikcraft.com.br</p>
+          </div>
+          
+          <p>Rua das Flores, 123 - São Paulo, SP</p>
+          <p>São Paulo</p>
+          <div class="social-midia">
+            <img src="./img/redes/instagram.svg" alt="">
+            <img src="./img/redes/facebook.svg" alt="">
+            <img src="./img/redes/youtube.svg" alt="">
+          </div>
+          
+        </div>
+
+        <div class="flx">
+          <h4 class="info-ti">INFORMAÇÕES</h4>
+          <nav>
+            <ul class="lnks-container">
+              <li class="lnks"><a href="index.html">Bicicletas</a></li>
+              <li class="lnks"><a href="insurance.html">Seguros</a></li>
+              <li class="lnks"><a href="contact.html">Contato</a></li>
+              <li class="lnks"><a href="#">Termos e Condições</a></li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
