--- a/insurance.html
+++ b/insurance.html
@@ -12,13 +12,13 @@
       <nav>
         <ul>
           <li>
-            <a href="index.html">Bicicletas</a>
+            <a href="./bicicletas.html">Bicicletas</a>
           </li>
           <li>
-            <a href="insurance.html">Seguros</a>
+            <a href="./insurance.html">Seguros</a>
           </li>
           <li>
-            <a href="contact.html">Contato</a>
+            <a href="./contact.html">Contato</a>
           </li>
         </ul>
       </nav>
