--- a/bicicletas.html
+++ b/bicicletas.html
@@ -176,10 +176,10 @@
           <h3>INFORMAÇÕES</h3>
           <nav>
             <ul>
-              <li><a href="#bicicletas">Bicicletas</a></li>
-              <li><a href="">Seguros</a></li>
-              <li><a href="">Contato</a></li>
-              <li><a href="">Termos e Condições</a></li>
+              <li><a href="./bicicletas.html">Bicicletas</a></li>
+              <li><a href="./insurance.html">Seguros</a></li>
+              <li><a href="./contact.html">Contato</a></li>
+              <li><a href="./terms.html">Termos e Condições</a></li>
             </ul>
           </nav>
         </div>
