--- a/budget.html
+++ b/budget.html
@@ -20,13 +20,13 @@
       <nav class="nave">
         <ul>
           <li>
-            <a href="index.html">Bicicletas</a>
+            <a href="./bicicletas.html">Bicicletas</a>
           </li>
           <li>
-            <a href="budget.html">Seguros</a>
+            <a href="./insurance.html">Seguros</a>
           </li>
           <li>
-            <a href="contact.html">Contato</a>
+            <a href="./contact.html">Contato</a>
           </li>
         </ul>
       </nav>
