--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
       <img src="./img/bikcraft.svg" alt="" />
       <nav>
         <ul>
-          <li><a href="index.html">Bicicletas</a></li>
-          <li><a href="about.html">Seguros</a></li>
-          <li><a href="contact.html">Contato</a></li>
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./insurance.html">Seguros</a></li>
+          <li><a href="./contact.html">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -188,10 +188,10 @@
             <h3>informações</h3>
             <div class="flex-ii">
               <ul>
-                <li><a href="#bicicletas">Bicicletas</a></li>
-                <li><a href="#seguros">Seguros</a></li>
-                <li><a href="#contato">Contato</a></li>
-                <li><a href="#">Termos e Condições .</a></li>
+                <li><a href="./bicicletas.html">Bicicletas</a></li>
+                <li><a href="./insurance.html">Seguros</a></li>
+                <li><a href="./contact.html">Contato</a></li>
+                <li><a href="./terms.html">Termos e Condições .</a></li>
               </ul>
             </div>
           </div>
