--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <nav>
         <img class="logo-image" src="./img/bikcraft.svg" alt="logo" />
         <ul class="menu-header">
-          <li class="detalhe"><a href="#bicicletas">Bicicletas</a></li>
-          <li class="detalhe"><a href="#seguros">Seguros</a></li>
-          <li class="detalhe"><a href="#information">Contato</a></li>
+          <li class="detalhe"><a href="./bicicletas.html">Bicicletas</a></li>
+          <li class="detalhe"><a href="./insurance.html">Seguros</a></li>
+          <li class="detalhe"><a href="./contact.html">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -39,7 +39,7 @@
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a class="botao" href="#">SELECIONE A SUA</a>
+          <a class="botao" href="./bicicletas.html">SELECIONE A SUA</a>
           <img class="det-image" src="./img/dec/bottom-left.svg" alt="" />
         </div>
         <div class="i"></div>
@@ -217,10 +217,10 @@
             <h3>informações</h3>
             <div class="flex-i">
               <ul>
-                <li><a href="#bicicletas">Bicicletas</a></li>
-                <li><a href="#seguros">Seguros</a></li>
-                <li><a href="#contato">Contato</a></li>
-                <li><a href="#">Termos e Condições .</a></li>
+                <li><a href="./bicicletas.html">Bicicletas</a></li>
+                <li><a href="./insurance.html">Seguros</a></li>
+                <li><a href="./contact.html">Contato</a></li>
+                <li><a href="./terms.html">Termos e Condições .</a></li>
               </ul>
             </div>
           </div>
