--- a/quality.html
+++ b/quality.html
@@ -18,9 +18,9 @@
       <img src="./img/bikcraft.svg" alt="" />
       <nav>
         <ul>
-          <li><a href="#">Bicicletas</a></li>
-          <li><a href="#">Seguros</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./insurance.html">Seguros</a></li>
+          <li><a href="./contact.html">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -163,10 +163,10 @@
       <div class="information">
         <h3>informações</h3>
         <div class="flex-inf">
-          <a href="#">Bicicletas</a>
-          <a href="#">Seguros</a>
-          <a href="#">Contato</a>
-          <a href="#">Termos e Condições</a>
+          <a href="./bicicletas.html">Bicicletas</a>
+          <a href="./insurance.html">Seguros</a>
+          <a href="./contact.html">Contato</a>
+          <a href="./terms.html">Termos e Condições</a>
         </div>
       </div>
     </footer>
